--- a/.env
+++ b/.env
@@ -1,8 +1,10 @@
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
-
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-
 DATABASE_URL="mongodb+srv://ifeanyi:ifeanyi@cluster0.lkcclqv.mongodb.net/test"
 NEXTAUTH_SECRET="NEXTAUTH_SECRET"
+
+GITHUB_ID=31581eabeb71b2f2b5a9
+GITHUB_SECRET=446cd58d9deda6be975b5843a61f05aa84cde5a0
+
+GOOGLE_CLIENT_ID=852847516976-p3eboihdsrtkoq442jjeel2ej2j0oh51.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME='dnzglvqse'
