--- a/package.json
+++ b/package.json
@@ -10,22 +10,33 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/leaflet": "^1.9.3",
     "@types/react": "18.2.5",
+    "@types/react-date-range": "^1.4.4",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.23",
-    "prisma": "^4.13.0",
+    "prisma": "^4.14.0",
     "tailwindcss": "^3.3.2",
     "typescript": "5.0.4"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.6",
-    "@prisma/client": "^4.13.0",
+    "@prisma/client": "^4.14.0",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
+    "date-fns": "^2.30.0",
+    "leaflet": "^1.9.4",
+    "next": "^13.4.2",
     "next-auth": "^4.22.1",
+    "next-cloudinary": "^4.10.1",
+    "query-string": "^8.1.0",
+    "react-date-range": "^1.4.0",
     "react-hook-form": "^7.43.9",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.8.0",
+    "react-leaflet": "^4.2.1",
+    "react-select": "^5.7.3",
+    "world-countries": "^4.0.0",
     "zustand": "^4.3.8"
   }
 }
