--- a/package.json
+++ b/package.json
@@ -9,15 +9,19 @@
     "lint": "next lint"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^13.4.4",
     "@types/bcrypt": "^5.0.0",
     "@types/leaflet": "^1.9.3",
-    "@types/react": "18.2.5",
+    "@types/react": "^18.2.7",
     "@types/react-date-range": "^1.4.4",
+    "@types/react-dom": "^18.2.4",
     "autoprefixer": "^10.4.14",
+    "eslint": "^8.41.0",
+    "eslint-plugin-next": "^0.0.0",
     "postcss": "^8.4.23",
     "prisma": "^4.14.0",
     "tailwindcss": "^3.3.2",
-    "typescript": "5.0.4"
+    "typescript": "^5.0.4"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.6",
@@ -30,7 +34,9 @@
     "next-auth": "^4.22.1",
     "next-cloudinary": "^4.10.1",
     "query-string": "^8.1.0",
+    "react": "^18.2.0",
     "react-date-range": "^1.4.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.8.0",
