--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": ["dom", "dom.iterable", "esnext", "scripthost"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -21,8 +21,9 @@
     ],
     "paths": {
       "@/*": ["./*"]
-    }
-  },
+    },
+    "types": ["react"]
+  },  
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
 }
