--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URL="mongodb+srv://ifeanyi:ifeanyi@cluster0.lkcclqv.mongodb.net/test"
+DATABASE_URL="mongodb+srv://citycrib:citycrib@citycrib.lmlbnfh.mongodb.net/test"
 NEXTAUTH_SECRET="NEXTAUTH_SECRET"
 
 GITHUB_ID=31581eabeb71b2f2b5a9
